--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Onyedikachi Alanwoko"
 description              : &description "Research Scientist"
 url                      : https://alanwoko.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/com" # the subpath of your site, e.g. "/blog"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "alanwoko/alanwoko.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
