--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "alanwoko/alanwoko.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Portrait.JPG"
+  avatar           : "Passport.JPG"
   name             : "Onyedikachi Alanwoko"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student, Department of Physics, University of South Florida."
