--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Passport.jpg"
   name             : "Onyedikachi Alanwoko"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. Student, Department of Physics, University of South Florida. \Major Advisor: Matthias Batzill"
+  bio              : "Ph.D. Student, Department of Physics, University of South Florida. /Major Advisor: Matthias Batzill"
   location         : "Tampa, Florida"
   employer         : "University of South Florida"
   uri              : # URL
